zsxd-1.6 (under development)

* Use solarus 1.0.
* Improve the English translation.
* Fix all missing empty lines in dialogs.
* Add the Solarus engine logo at startup.

zsxd-1.5.3 (2013-05-08)

* Use solarus 0.9.3.
* Dungeon 2: the piece of heart could be obtained very easily with the sword
* Change the English website url in the credits dialogs
* Fix missing lines in dialogs
* Fix the CMake script that creates the zip archive.
* Make creepers appear earlier in the game (#1).

zsxd-1.5.2 (2012-03-31)

* Fix missing empty lines in the credits dialogs

zsxd-1.5.1 (2012-03-31)

* Fix a crash during a dialog, introduced by zsxd 1.5

zsxd-1.5 (2012-02-12)

* Use solarus-0.9.1
* Fix a typo in a dialog
* Change the color of the splash sprites when plunging into lava

zsxd-1.4 (2011-12-23)

* Use solarus-0.9.0 (changelogs of solarus and zsxd will now be separated)
* Includes all improvements and bug fixes of solarus since zsxd-1.3
* Fix a duplicate heart container

zsxd-1.3 (2011-08-12)

* Add the English translation
* Fix a precision bug with sensors

zsxd-1.2 (2011-04-23)

* Fix a Windows issue with mono sound effects

zsxd-1.1 (2011-04-02)

* Use libvorbisfile instead of libsndfile for sound effects
* Replace the last sword by a new rupee bag
* Various minor improvements

zsxd-1.0 (2011-04-01)

* Initial release of Zelda Mystery of Solarus XD
