@@ -18,6 +18,7 @@ function close_creeper_room_door_sensor:on_activated()
   if creeper_door:is_open()
       and hero:get_direction() == 2 then
     map:close_doors("creeper_door")
+    creeper_door_switch:set_activated(false)
   end
 end
 
