@@ -11722,7 +11722,7 @@ switch{
   layer = 1,
   x = 864,
   y = 672,
-  name = "switch_torch_11_off_2",
+  name = "switch_torch_11_off",
   subtype = "1",
   needs_block = false,
   inactivate_when_leaving = false,
@@ -11732,7 +11732,7 @@ switch{
   layer = 1,
   x = 880,
   y = 672,
-  name = "switch_torch_11_on_2",
+  name = "switch_torch_11_on",
   subtype = "1",
   needs_block = false,
   inactivate_when_leaving = false,
